absolute path for vendor libs

--- a/data/boxes.html
+++ b/data/boxes.html
@@ -3,9 +3,9 @@
   <title>Tildeverse Boxes</title>
 
   <!--    DataTables stuff  -->
-  <link rel="stylesheet" type="text/css" href="../jquery/src/jquery.dataTables.min.css">
-  <script type="text/javascript" charset="utf8" src="../jquery/src/jquery.js"></script>
-  <script type="text/javascript" charset="utf8" src="../jquery/src/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.css">
+  <script src="https://tilde.town/~nossidge/jquery/src/jquery.js"></script>
+  <script src="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.js"></script>
   <script type="text/javascript">
     $(document).ready( function () {
       $('#table_id').DataTable({
