--- a/data/pie.html
+++ b/data/pie.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset='utf-8' content='utf-8' http-equiv='encoding'>
-<script src='../lib/Chart.bundle.min.js'></script>
+<script src='https://tilde.town/~nossidge/lib/Chart.bundle.min.js'></script>
 
 <style type='text/css'>
   #content {
