json file now named 'tildeverse.json'

--- a/data/pie.html
+++ b/data/pie.html
@@ -22,7 +22,7 @@ window.addEventListener('load', function() {
 
   // Grab data from the JSON file.
   var x = new XMLHttpRequest();
-  x.open('GET', 'users.json', true);
+  x.open('GET', 'tildeverse.json', true);
   x.responseType = 'json';
   x.onload = function() {
     var objJSON = x.response;
