--- a/data/users_template.html
+++ b/data/users_template.html
@@ -38,7 +38,7 @@
 </p>
 <p>Here's a list of the <a href="boxes.html">boxes</a> being scanned, and the source file being read.
 <br>Here's a <a href="pie.html">pie chart</a> of the number of users on each box.
-<br>This list is also available as <a href="users.json">JSON</a>.
+<br>This list is also available as <a href="tildeverse.json">JSON</a>.
 </p>
 
 <hr>
