--- a/data/index_template.html
+++ b/data/index_template.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8"></meta>
   <title>Tildeverse Users</title>
 
+  <script src="users.js"></script>
   <script src="boxes.js"></script>
   <script src="pie.js"></script>
   <script src="https://tilde.town/~nossidge/jquery/src/jquery.js"></script>
   <script src="https://tilde.town/~nossidge/lib/Chart.bundle.min.js"></script>
+  <script src="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.js"></script>
   <script src="https://tilde.town/~nossidge/zelda/lib/ext/bootstrap/js/bootstrap.min.js"></script>
   <link href="https://tilde.town/~nossidge/zelda/lib/ext/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.css">
-  <script src="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.js"></script>
+  <link href="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.css" rel="stylesheet">
 
   <script type="text/javascript">
     function dataTables() {
@@ -32,6 +33,7 @@
       x.responseType = "json";
       x.onload = function() {
         var tildeverseJSON = x.response;
+        users(tildeverseJSON);
         boxes(tildeverseJSON);
         pie(tildeverseJSON);
         dataTables();
@@ -86,11 +88,6 @@
             <th>User URL</th>
           </tr>
         </thead>
-        <tbody>
-
-<!-- @USER_LIST -->
-
-        </tbody>
       </table>
     </div>
 
