--- a/data/index_template.html
+++ b/data/index_template.html
@@ -17,15 +17,18 @@
 
   <script type="text/javascript">
     function dataTables() {
+      let colOrder = {
+        "#table_users": [3, "desc"],
+        "#table_boxes": [2, "desc"]
+      }
       $.each(["#table_users", "#table_boxes"], function(index, value) {
-        let table = $(value).DataTable({
+        $(value).DataTable({
           "aLengthMenu": [
             [20, 50, 100, 200, 500, -1],
             [20, 50, 100, 200, 500, "All"]
           ],
+          "order": colOrder[value]
         });
-        table.column("1:visible").order("asc");
-        table.column("0:visible").order("asc");
       });
     }
     $(document).ready( function () {
