--- a/data/index_template.html
+++ b/data/index_template.html
@@ -21,13 +21,21 @@
         "#table_users": [3, "desc"],
         "#table_boxes": [2, "desc"]
       }
+      let colHidden = {
+        "#table_users": [{
+          "targets": [4],
+          "visible": false
+        }],
+        "#table_boxes": []
+      }
       $.each(["#table_users", "#table_boxes"], function(index, value) {
         $(value).DataTable({
           "aLengthMenu": [
             [20, 50, 100, 200, 500, -1],
             [20, 50, 100, 200, 500, "All"]
           ],
-          "order": colOrder[value]
+          "order": colOrder[value],
+          "columnDefs": colHidden[value]
         });
       });
     }
