--- a/data/index_template.html
+++ b/data/index_template.html
@@ -44,7 +44,7 @@
     function createMultiselect() {
       let tags = [
         "blog","tutorial","prose","poetry",
-        "art","photo","audio","gaming",
+        "art","photo","audio","video","gaming",
         "code","procgen","web1.0","unix","tilde",
         "links","brief","redirect","empty"
       ];
