add 'app' tag to table filter UI

--- a/data/index_template.html
+++ b/data/index_template.html
@@ -45,7 +45,7 @@
       let tags = [
         "blog","tutorial","prose","poetry",
         "art","photo","audio","video","gaming",
-        "code","procgen","web1.0","unix","tilde",
+        "app","code","procgen","web1.0","unix","tilde",
         "links","brief","redirect","empty"
       ];
       let selectContents = $.map(tags, function(value) {
