give more information in the 'About' section

--- a/input/index.html
+++ b/input/index.html
@@ -130,7 +130,7 @@
           <a href="#pie" data-toggle="tab">Pie</a>
         </li>
         <li>
-          <a href="#data" data-toggle="tab">Data</a>
+          <a href="#about" data-toggle="tab">About</a>
         </li>
       </ul>
 
@@ -150,15 +150,23 @@
           <canvas id="tildePie" width="400px" height="400px"></canvas>
         </div>
 
-        <div class="tab-pane fade" id="data">
+        <div class="tab-pane fade" id="about">
           <br>
-          <p>Code is available on <a href="https://github.com/nossidge/tildeverse">GitHub</a>.
+          <p>This is a list of all users in the whole wide Tildeverse.
+          <br>Since the creation of <a href="http://tilde.club/">tilde.club</a>, many <a href="http://tilde.club/~pfhawkins/othertildes.html">other sites</a> have sprung up.
+          <br>All united in celebration of a kinder, old-fashioned WWW.
+          <br>United in goal, differing only in URL.
+          <br>Run by people, not corporations.
+          <br>Like the web used to be.</p>
+          <hr>
           <p>This list is based on the <a href="http://tilde.club/~pfhawkins/othertildes.html">master list</a> tended to by <a href="https://twitter.com/pfhawkins">~pfhawkins</a>
           <br>If you are aware of any updates to this list, please let me know: <a href="https://twitter.com/nossidge">@nossidge</a></p>
           <p>Users are found by scraping the source of a Tilde's user directory.
           <br>If any of those pages change, this list will likely break.</p>
           <p>The full information can be downloaded as <a href="tildeverse.json">JSON</a>.
           <br>It is updated every hour, as is this web page.</p>
+          <p>Code is available on <a href="https://github.com/nossidge/tildeverse">GitHub</a>.</p>
+          <hr>
           <p>Last update: <strong id="last_update">(JavaScript required)</strong></p>
         </div>
       </div>
