--- a/input/index.html
+++ b/input/index.html
@@ -101,14 +101,22 @@
   <style type="text/css">
     #content { width: 800px; margin: 0 auto; }
     p, h1    { text-align: center; }
-    canvas   { float: right; }
-    #legend                    { margin: 0 auto; }
+    #legend                    { margin: 0 auto; padding: 20px 0px; }
     #legend table              { margin: 0 auto; }
     #legend tr td:first-child  { padding-left: 0px; }
     #legend tr td:last-child   { text-align: right; }
-    #legend td                 { padding: 0px 0px 0px 12px; }
+    #legend tr th:last-child   { text-align: right; }
+    #legend td, #legend th     { padding: 0px 0px 0px 12px; }
     .dataTables_wrapper        { padding: 20px 0px 10px 0px; }
     .multiselect-native-select { margin-left: 78px; }
+    .tildePie_wrapper {
+      width:  560px;
+      height: 560px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      padding-bottom: 10px;
+    }
   </style>
  </head>
 
@@ -144,10 +152,10 @@
         </div>
 
         <div class="tab-pane fade" id="pie">
-          <br>
           <div id="legend"></div>
-          <br>
-          <canvas id="tildePie" width="400px" height="400px"></canvas>
+          <div class="tildePie_wrapper">
+            <canvas id="tildePie"></canvas>
+          </div>
         </div>
 
         <div class="tab-pane fade" id="about">
