--- a/input/browser/index.html
+++ b/input/browser/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8"></meta>
     <title>Tildeverse Browser</title>
     <script src="https://tilde.town/~nossidge/jquery/src/jquery.js"></script>
-    <script src="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://tilde.town/~nossidge/zelda/holy_grail.css">
@@ -22,7 +20,7 @@
         ACCESSIBILITY.tabNavClicks();
 
         // Wait for the external JSON file to load.
-        $.getJSON("tildeverse.json", function(data) {
+        $.getJSON("../tildeverse.json", function(data) {
 
           // Load the JSON data to the USERS module.
           USERS.initialize(data);
@@ -95,13 +93,13 @@
                 <a tabindex="8" id="toggle_all_unchecked"
                    title="Select/deselect all"
                    class="btn btn-default btn-lg btn_glyph"
-                   onclick="TAG_MASS_SELECT.toggleAllUnchecked(this)">
+                   onclick="TOGGLE_GROUPS.toggleAllUnchecked(this)">
                   <div class="glyphicon glyphicon-remove"></div>
                 </a>
                 <a tabindex="9" id="toggle_all_checked"
                    title="Select/deselect all"
                    class="btn btn-default btn-lg btn_glyph"
-                   onclick="TAG_MASS_SELECT.toggleAllChecked(this)">
+                   onclick="TOGGLE_GROUPS.toggleAllChecked(this)">
                   <div class="glyphicon glyphicon-ok"></div>
                 </a>
                 <div class="btn btn-default btn-lg tag_button_desc tag_header">
