--- a/web/public/browser/index.html
+++ b/web/public/browser/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8"></meta>
     <title>Tildeverse Browser</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://tilde.town/~nossidge/zelda/holy_grail.css">
+    <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../vendor/css/holy_grail.css">
     <link rel="stylesheet" href="browser.css">
+    <script src="../vendor/js/jquery.min.js"></script>
+    <script src="../vendor/js/bootstrap.min.js"></script>
     <script src="browser.js"></script>
     <script language="javascript">
 
