include vendor scripts used by public index.html

--- a/web/public/browser/index.html
+++ b/web/public/browser/index.html
@@ -133,7 +133,7 @@
       </div>
       <iframe id="tildesite_iframe" name="tildesite" class="col_middle border hidden"></iframe>
       <div id="help_text" class="col_middle border">
-        <h1>Tildeverse User Browser</h1>
+        <h1>Tildeverse Directory Browser</h1>
         <p>
           Welcome! This is a frame-based browser to help you search for <a href="https://tilde.town/~nossidge/tildeverse/">Tildeverse</a> homepages<br>
           Each user's public homepage has been tagged based on what sort of content they post<br>
