--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,17 +2,15 @@
 <html>
  <head>
   <meta charset="UTF-8"></meta>
-  <title>Tildeverse Users</title>
-
-  <script src="https://tilde.town/~nossidge/jquery/src/jquery.js"></script>
-  <script src="https://tilde.town/~nossidge/lib/Chart.bundle.min.js"></script>
-  <script src="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.js"></script>
-  <script src="https://tilde.town/~nossidge/zelda/lib/ext/bootstrap/js/bootstrap.min.js"></script>
-  <link href="https://tilde.town/~nossidge/zelda/lib/ext/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://tilde.town/~nossidge/jquery/src/jquery.dataTables.min.css" rel="stylesheet">
-  <link href="https://tilde.town/~nossidge/zelda/lib/ext/bootstrap/css/bootstrap-multiselect.css" rel="stylesheet">
-  <script src="https://tilde.town/~nossidge/zelda/lib/ext/bootstrap/js/bootstrap-multiselect.js"></script>
-
+  <title>Tildeverse Directory</title>
+  <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
+  <link rel="stylesheet" href="vendor/css/bootstrap-multiselect.css">
+  <link rel="stylesheet" href="vendor/css/jquery.dataTables.min.css">
+  <script src="vendor/js/jquery.min.js"></script>
+  <script src="vendor/js/Chart.bundle.min.js"></script>
+  <script src="vendor/js/jquery.dataTables.min.js"></script>
+  <script src="vendor/js/bootstrap.min.js"></script>
+  <script src="vendor/js/bootstrap-multiselect.js"></script>
   <script src="users.js"></script>
   <script src="boxes.js"></script>
   <script src="pie.js"></script>
@@ -123,7 +121,7 @@
  <body>
   <div id="content">
 
-    <h1>The users of the Tildeverse</h1>
+    <h1>Tildeverse User Directory</h1>
     <hr>
 
     <div>
